@@ -1,5 +1,12 @@
 2011-07-05  Corinna Vinschen  <corinna@vinschen.de>
 
+	* fhandler.cc (fhandler_base::open): Never create files with WRITE_DAC
+	access.  Explain why.
+	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Improve debug
+	output.
+
+2011-07-05  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler.cc (fhandler_base::open): Don't open file with WRITE_DAC
 	access on remote filesystem.  Explain why.
 	* fhandler_disk_file.cc (fhandler_disk_file::mkdir): Ditto for
